--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,32 @@
 plugins {
+    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'org.springframework.boot' version '2.2.2.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-	id 'java'
 }
 
-group = 'com.example'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+subprojects {
+		apply plugin: 'org.springframework.boot'
+		apply plugin: 'io.spring.dependency-management'
+		apply plugin: 'java'
 
-repositories {
-	mavenCentral()
-}
+	group = 'com.example'
+	version = '0.0.1-SNAPSHOT'
+	sourceCompatibility = '1.8'
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	//to enable H2 console
-	//implementation 'org.springframework.boot:spring-boot-starter-web'
-	runtimeOnly 'com.h2database:h2'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	repositories {
+		mavenCentral()
 	}
-}
 
-test {
-	useJUnitPlatform()
+	dependencies {
+		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+		//to enable H2 console
+		//implementation 'org.springframework.boot:spring-boot-starter-web'
+		runtimeOnly 'com.h2database:h2'
+		testImplementation('org.springframework.boot:spring-boot-starter-test') {
+			exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+		}
+	}
+
+	test {
+		useJUnitPlatform()
+	}
 }
