--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ subprojects {
 		//to enable H2 console
 		//implementation 'org.springframework.boot:spring-boot-starter-web'
 		runtimeOnly 'com.h2database:h2'
+		implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.14'
 		testImplementation('org.springframework.boot:spring-boot-starter-test') {
 			exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 		}
