hibernate second level caching

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ subprojects {
 		//implementation 'org.springframework.boot:spring-boot-starter-web'
 		runtimeOnly 'com.h2database:h2'
 		implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.14'
+		implementation group: 'org.hibernate', name: 'hibernate-ehcache', version: '5.4.10.Final'
+// https://mvnrepository.com/artifact/org.ehcache/ehcache
+		implementation group: 'org.ehcache', name: 'ehcache', version: '3.4.0'
 		testImplementation('org.springframework.boot:spring-boot-starter-test') {
 			exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 		}
